# zoraos

./: .env.example  .gitignore  CITATION.cff  Dockerfile  Open ZoraASI.command  README.md  SECURITY.md  __init__.py  docker-compose.yml  pyproject.toml
agents/: __init__.py  base.py  manager.py  registry.py
agents/implementations/: __init__.py  developer.py  gaming.py  knowledge.py  research.py  writer.py
api/: dependencies.py  main.py  security.py
api/routes/: agents.py  chat.py  health.py  memory.py  system.py  tools.py
cloud/zoraasi-online/: README.md  package.json  wrangler.jsonc
configs/: defaults.yaml  settings.py
docs/: ARCHITECTURE.md  ARTIFACTS.md  CLUSTER.md  DAEMON.md  GOVERNANCE.md  OPENCODE_HANDOFF_2026-07-20.md  PUBLICATION.md  WORKFLOWS.md  ZENODO_21313827.md  ZENODO_21464562.md  ZENODO_UPLOAD_README.md
docs/pdr/: ZoraOS_PDR_v0.1.docx  ZoraOS_PDR_v0.1.md
gateway/: __init__.py  service.py
governance/: __init__.py  audit.py  context.py  pg_audit.py  policy.py
launchd/: com.zoraasi.daemon.plist  com.zoraasi.sentinel.plist
memory/: __init__.py  base.py  knowledge_graph.py  store.py  vector.py
models/: __init__.py  base.py  manager.py  registry.py
models/providers/: __init__.py  litellm_provider.py  openrouter_provider.py
paper/: README.md  main.tex  references.bib  zoraasi_complete.tex
pets/zora/: README.md  shared_memory.py  zoraasi.json  (+1 more)
planner/: __init__.py  engine.py
plugins/: __init__.py  example_plugin.py
router/: __init__.py  engine.py
scheduler/: runner.py
scripts/: agent_runner.py  cluster_setup.sh  ingest_paper.py  init-db.sql  start.sh  stop_zora_sentinel.sh  zora_daemon.py  zora_sentinel.py
tests/: test_agents.py  test_daemon.py  test_gateway.py  test_governance.py  test_memory.py  test_models.py  test_pg_audit.py  test_planner.py  test_router.py  test_security.py  test_tools.py
tools/: __init__.py  base.py  manager.py  registry.py
ui/: next.config.js  package-lock.json  package.json  tailwind.config.js
(+20 files in other folders)
