[project]
name = "zoraos"
version = "0.1.0"
description = "ZoraOS - A local-first AI operating system for research, coding, and knowledge management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "starlette<1.0.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "litellm>=1.55.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.30",
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.0",
    "pypdf>=5.1.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "orjson>=3.10.0",
    "python-multipart>=0.0.12",
    "websockets>=14.1",
    "rich>=13.9.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "numpy>=2.1.0",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "faker>=33.0.0",
]
voice = [
    "openai-whisper>=20240930",
    "sounddevice>=0.5.1",
]
web = [
    "playwright>=1.49.0",
]
all = [
    "zoraos[dev,voice,web]",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["agents*", "api*", "memory*", "models*", "tools*", "gateway*", "governance*", "planner*", "router*", "scheduler*", "configs*", "plugins*"]
exclude = ["*.tests", "*.tests.*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
